test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_ignore_stmt.draco
proc main() void : ignore a := 1; corp;

