test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_rval_read_stmt.draco
proc main() void : read(a+1); corp;
